<resources>
    <string name="app_name">kameranezo</string>
    <string name="k_zter_leti_kamera_stream_alkalmaz_s">Közterületi kamera stream alkalmazás</string>
    <string name="k_sz_tette_simon_istv_n_rb7cbx">Készítette: Simon István (RB7CBX)</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="e_mail_c_m">E-mail cím:</string>
    <string name="regisztgomb">Regisztráció</string>
    <string name="n_v">Név:</string>
    <string name="regisztr_l_s">Regisztrálás!</string>
    <string name="jelsz">Jelszó:</string>
    <string name="bejelentkez_ss">Bejelentkezés</string>
    <string name="profil">Profil</string>
    <string name="jelsz_jra">Jelszó újra</string>
    <string name="jelszo">Jelszó</string>
    <string name="jelsz_friss_t_se">Jelszó frissítése</string>
    <string name="profil_szerkeszt_se">Profil szerkesztése</string>
    <string name="kamer_k_megtekint_se">Kamerák megtekintése</string>
    <string name="profil_szerkeszt_se2">Profil szerkesztése</string>
    <string name="j_jelsz">Új jelszó</string>
    <string name="jelszofrissit">Jelszó frissítése</string>
    <string name="profil_szerkeszt_s">Profil szerkesztés</string>
    <string name="r_gi_jelsz">Régi jelszó</string>
    <string name="uj_jelsz">Új jelszó</string>
    <string name="j_jelsz_jra">Új jelszó újra</string>
    <string name="profil_friss_t_se">Profil frissítése</string>
    <string name="kamera_men">Kamera Menü</string>
    <string name="kamera_k_p">Kamera kép</string>
    <string name="kamera_k_pE">Kamera kép</string>
    <string name="n_v_v_ltoztat_s">Név változtatás</string>
    <string name="j_n_v">Új név</string>
</resources>